--- a/package.json
+++ b/package.json
@@ -1,29 +1,15 @@
 {
   "name": "meu-bot",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "commonjs",
+  "description": "Painel + bot Discord (CJS)",
+  "main": "server.cjs",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:server": "node server.cjs",
+    "start:bot": "node bot.cjs"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.23.2",
+    "discord.js": "^14.15.0",
     "dotenv": "^17.2.3",
-    "openai": "^6.7.0"
-  },
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/xatbau/meu-bot-discord.git"
-  },
-  "bugs": {
-    "url": "https://github.com/xatbau/meu-bot-discord/issues"
-  },
-  "homepage": "https://github.com/xatbau/meu-bot-discord#readme"
+    "express": "^4.18.2"
+  }
 }
